# linkml-map-rs

./: .codedbignore  .gitignore  CITATION.cff  CLAUDE.md  Cargo.toml  README.md  VENDORED_FIXTURES_REPORT.md  fix-wt-hook.ps1  harness-ownership.toml  tmp_cross_table_test.md  tmp_engine.md  tmp_fk_utils.md  tmp_lookup_index.md
.cargo/: config.toml
.codedb/: word.index
.github/workflows/: ci.yml  release.yml
.manifold/: platform-capabilities
_workspace_prev/: 10_transformengine_schemaview_fix_report.md
benchmarks/vs_python/: .gitignore  README.md  bench_python.py  run.ps1  run.sh
crates/linkml-map-cli/: Cargo.toml
crates/linkml-map-cli/src/: lib.rs  main.rs
crates/linkml-map-cli/tests/: integration_map_data.rs  integration_validate.rs
crates/linkml-map-conformance/: Cargo.toml
crates/linkml-map-conformance/src/: compliance.rs  lib.rs
crates/linkml-map-core/: Cargo.toml
crates/linkml-map-core/src/: error.rs  lib.rs  plan.rs  value.rs
crates/linkml-map-core/src/datamodel/: mod.rs
crates/linkml-map-core/src/engine/: lookup_index.rs  mod.rs  object_index.rs  units.rs
crates/linkml-map-core/src/expr/: error.rs  eval.rs  lexer.rs  mod.rs  parser.rs  stmt.rs
crates/linkml-map-core/src/inference/: mod.rs  schema_mapper.rs  tests.rs
crates/linkml-map-core/src/normalize/: expression_locations.rs  join_utils.rs  mod.rs  tests.rs
crates/linkml-map-core/src/schema/: mod.rs
crates/linkml-map-core/src/validate/: expr_refs.rs  mod.rs  tests.rs
crates/linkml-map-duckdb/: Cargo.toml
crates/linkml-map-duckdb/src/: compiler.rs  lib.rs  transformer.rs
crates/linkml-map-io/: Cargo.toml
crates/linkml-map-io/src/: format.rs  lib.rs  loaders.rs  writers.rs
crates/linkml-map-pipeline/: Cargo.toml
crates/linkml-map-pipeline/src/: lib.rs
crates/linkml-map-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/linkml-map-py/python/linkml_map/: __init__.py
crates/linkml-map-py/python/linkml_map/transformer/: __init__.py  object_transformer.py
crates/linkml-map-py/python/linkml_map_rs/: __init__.py  _native.pyi
crates/linkml-map-py/src/: lib.rs
crates/linkml-map-py/tests/: smoke.py  test_compat_api.py  test_join_registration.py  test_validate_spec.py
crates/linkml-map-schemaview/: Cargo.toml
crates/linkml-map-schemaview/src/: lib.rs
crates/linkml-map-schemaview/tests/: integration.rs
crates/linkml-map-schemaview/tests/data/: simple_enum.yaml
docs/: schema-backend-spike.md  upstream-sync-2026-07-07.md
reference/upstream-python/: README.md
tests/: COMPLIANCE_REPORT.md  CONFORMANCE_REPORT.md  INDEX.md
tests/compliance/: PROVENANCE.md
tests/golden/: README.md
tests/golden/fair_mappings_metadata/: README.md
tests/golden/flattening/: README.md
tests/golden/linkml-mcp-nhsbt/: source.yaml
tests/golden/measurements/: README.md
tests/golden/personinfo_basic/: README.md
tests/golden/type_coercion/: README.md
xtask/: Cargo.toml
xtask/src/: gate.rs  main.rs
