[workspace]
resolver = "3"
members = ["crates/linkml-map-core", "crates/linkml-map-io", "crates/linkml-map-cli", "crates/linkml-map-schemaview", "crates/linkml-map-conformance", "crates/linkml-map-pipeline", "crates/linkml-map-py", "crates/linkml-map-duckdb", "xtask"]
# linkml-map-py is a cdylib (maturin wheel); add to members so workspace deps resolve
# Build wheel: maturin build -m crates/linkml-map-py/Cargo.toml
# cargo build --lib -p linkml-map-py  also works (skips Python linking)

[workspace.package]
version = "0.1.18"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
indexmap = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v5"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
csv-async = { version = "1", features = ["tokio"] }
rayon = "1"
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
walkdir = "2"
tempfile = "3"
