[package]
name = "linkml-map-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "linkml-tr-rs"
path = "src/main.rs"

[dependencies]
linkml-map-core      = { path = "../linkml-map-core" }
linkml-map-io        = { path = "../linkml-map-io" }
linkml-map-pipeline  = { path = "../linkml-map-pipeline" }
linkml-map-schemaview = { path = "../linkml-map-schemaview" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true }
