[package]
name = "linkml-map-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
linkml-map-core = { path = "../linkml-map-core" }
tokio = { workspace = true }
futures = { workspace = true }
csv-async = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
