[package]
name = "linkml-map-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "linkml_map_rs"
crate-type = ["cdylib"]

[dependencies]
linkml-map-core = { path = "../linkml-map-core" }
linkml-map-io = { path = "../linkml-map-io" }
pyo3 = { workspace = true }
