[package]
name = "linkml-map-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "linkml_map_rs"
crate-type = ["cdylib"]

[dependencies]
linkml-map-core = { path = "../linkml-map-core" }
linkml-map-schemaview = { path = "../linkml-map-schemaview" }
pyo3 = { workspace = true, features = ["extension-module"] }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
anyhow = { workspace = true }
