[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "linkml-map-rs"
version = "0.1.0"
description = "Rust async/concurrent port of linkml-map"
requires-python = ">=3.8"

# Optional: only needed for the `linkml_map` compatibility shim (SchemaView +
# YAML dumping). The native `linkml_map_rs` API needs neither.
[project.optional-dependencies]
shim = ["linkml-runtime", "pyyaml"]

[tool.maturin]
# Compiled core is `linkml_map_rs._native`; the `linkml_map_rs` package
# (python/linkml_map_rs/__init__.py) re-exports it, and the `linkml_map` shim
# ships alongside.
module-name = "linkml_map_rs._native"
python-source = "python"
# python-source's mixed-layout auto-discovery only bundles the ONE package
# matching module-name's root (`linkml_map_rs`); the sibling `linkml_map`
# shim package must be listed explicitly or it silently never lands in the
# wheel — confirmed by unzipping a built wheel, which omitted `linkml_map/`
# entirely, causing the CI `python-compat` job's `pytest.importorskip` to
# skip the whole test module (pytest exit 5, "no tests collected").
include = [{ path = "python/linkml_map/**/*.py", format = "wheel" }]
