[package]
name = "linkml-map-schemaview"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
linkml-map-core = { path = "../linkml-map-core" }
# LinkML metamodel + SchemaView, from the public Kapernikov/rust-linkml-core
# workspace (pinned for reproducibility). Replaces the previous local path deps
# so the repo builds from a clean clone.
schemaview = { git = "https://github.com/Kapernikov/rust-linkml-core", rev = "df9d18ec03086bcbd2dc82c81db5ae724f6e132b", default-features = false, features = [] }
linkml_meta = { git = "https://github.com/Kapernikov/rust-linkml-core", rev = "df9d18ec03086bcbd2dc82c81db5ae724f6e132b" }
serde_yaml = "0.9"
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
